--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.wN5ZMC0Z.js",
+    "file": "_app/immutable/entry/app.BHXamltk.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -16,7 +16,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BFt8rnBI.js",
+    "file": "_app/immutable/nodes/0.MB713wrh.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -24,7 +24,7 @@
     "imports": [
       "_scheduler.Ce_0Mfso.js",
       "_index.CoaCY2RK.js",
-      "_stores.kUx3wf7h.js"
+      "_stores.kXqhf6KI.js"
     ],
     "css": [
       "_app/immutable/assets/0.rgE380Ej.css"
@@ -45,7 +45,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.e7G0IZBq.js",
+    "file": "_app/immutable/nodes/1.cXSd-ad6.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -53,7 +53,7 @@
     "imports": [
       "_scheduler.Ce_0Mfso.js",
       "_index.CoaCY2RK.js",
-      "_stores.kUx3wf7h.js"
+      "_stores.kXqhf6KI.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -86,8 +86,8 @@
       "_index.CoaCY2RK.js"
     ]
   },
-  "_entry.D2gqwTVy.js": {
-    "file": "_app/immutable/chunks/entry.D2gqwTVy.js",
+  "_entry.CUEsYPcW.js": {
+    "file": "_app/immutable/chunks/entry.CUEsYPcW.js",
     "name": "entry",
     "imports": [
       "_scheduler.Ce_0Mfso.js",
@@ -112,11 +112,11 @@
     "file": "_app/immutable/chunks/scheduler.Ce_0Mfso.js",
     "name": "scheduler"
   },
-  "_stores.kUx3wf7h.js": {
-    "file": "_app/immutable/chunks/stores.kUx3wf7h.js",
+  "_stores.kXqhf6KI.js": {
+    "file": "_app/immutable/chunks/stores.kXqhf6KI.js",
     "name": "stores",
     "imports": [
-      "_entry.D2gqwTVy.js"
+      "_entry.CUEsYPcW.js"
     ]
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff": {
@@ -168,12 +168,12 @@
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.COQYf_QZ.js",
+    "file": "_app/immutable/entry/start.BTuZZics.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_entry.D2gqwTVy.js"
+      "_entry.CUEsYPcW.js"
     ]
   },
   "src/lib/images/svelte-welcome.png": {
